# rust

./: .dockerignore  .env.template  Cargo.toml  README.md  compose.yml  dockerfile
.github/workflows/: ci.yml
migrations/: 20230525201528_init.down.sql  20230525201528_init.up.sql  20230525201528_todos.down.sql  20230525201528_todos.up.sql  20230525221746_users.up.sql
src/: auth.rs  config.rs  handler.rs  main.rs  model.rs  response.rs  route.rs  schema.rs
src/handlers/: auth.rs  health.rs  mod.rs  todo.rs
