[package]
name = "rust"
version = "1.0.0"
edition = "2021"
authors = ["Kasra Alizadeh"]
repository = "https://github.com/ikaaasra/rust"
homepage = "https://github.com/ikaaasra/rust"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
uuid = { version = "1.3.3", features = ["v4", "serde"] }
